--- a/styles/form.css
+++ b/styles/form.css
@@ -3,7 +3,8 @@ form:not(.inline) {
     margin: auto;
     max-width: 500px;
     border: 1px solid;
-    background: var(--offset-color);
+    background: rgb(66, 100, 161);
+    /* background: var(--offset-color); */
     padding: 20px;
 
     display: grid;
@@ -14,7 +15,8 @@ label {
     font-family: 'Titillium Web';
     font-size: 0.9em;
     font-weight: bold;
-    color: var(--label-color);
+    color: aliceblue;
+    /* color: var(--label-color); */
 
     display: grid;
     gap: 5px;
@@ -27,6 +29,7 @@ form button {
     width: 100%;
     font-size: 1.15em;
     padding: 5px;
+    background: #a0b2cf;
 }
 
 form input,
@@ -53,7 +56,8 @@ form textarea {
 form button {
     margin-top: 10px;
     height: 45px;
-    background: var(--action-color);
+    background-color: #625685;
+    /* background: var(--action-color); */
     border: 0;
     font-weight: bold;
     color: white;
