--- a/styles/global.css
+++ b/styles/global.css
@@ -69,3 +69,39 @@ main {
 .hidden {
     display: none;
 }
+
+#post-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+    grid-auto-rows: 250px;
+    height: 800px;
+    width: 1800px;
+    position: relative;
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-left: 80px;
+    border: 5px solid burlywood;
+
+    background-image: url(/assets/bulletin-board.jpg);
+}
+
+li {
+    display: grid;
+    grid-template-rows: 40px 20px 100px 1fr;
+    /* grid-template-columns: repeat(auto-fill, minmax(275px, 1fr)); */
+    /* grid-auto-rows: 400px; */
+    /* gap: 10px; */
+    height: 200px;
+    width: 200px;
+    background-color: gold;
+    justify-items: center;
+    align-items: center;
+}
+
+li h2,
+li p {
+    /* padding: -5px 10px; */
+}
+
+li h2 {
+}
